# Rutsubo

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.relay  README.md  docker-compose.yml  justfile  railway.toml
.github/workflows/: ci.yml
contract-export/: CHECKSUM
crates/core/: Cargo.toml  README.md
crates/core/bindings/: Command.ts  CommandEnvelope.ts
crates/core/src/: api.rs  commands.rs  diff.rs  envelope.rs  events.rs  fixtures.rs  ids.rs  lib.rs  paths.rs  relay.rs
crates/core/tests/: contract_export.rs  roundtrip.rs
crates/daemon/: Cargo.toml  README.md
crates/daemon/.sqlx/: query-06531bc0f87d56704234d8a844eb6d54026213d932547c20a6d10191e35b250c.json  query-357df1d118f9c856a7bce18295d9b10b717b4d4612128cf005b7c4a32cb36ee4.json  query-363e50e96e15aea9a8df4038654e56e5b07ab9058afdee1e65250c5203fb1a14.json  query-37fe3d70bea416a95dca886a3d700c5cd1bf6941c6d1dc1a4f814a8a423efeee.json  query-398ee236ebc3efa2a3c1f7c9c47f3f722223431e26a0bd6fb70190a8bbb22b06.json  query-4358513d114b4a49af43523b6cf8b4bb6eb9df2028cd4b64736e70b435e11afa.json  query-4dbfd20e4b77f2acf8342743263368c05153cd34075d9aaabc51882021b95d33.json  query-543e5134d1ee6b24e199e9f6992d42052c9ca068607eefc4ecf12d3f8bd9d85d.json  query-5d98cd4e969778995e015e8da5c48ebf1678e080efa0321a8130eb6400856a0d.json  query-5e6bb175680addda50ac6138ee0c74693eee24873fdad55ff4ebd4a1689362d8.json  query-675c1a0509ce5e542ffd5f59701c2d53e892384f429364c14c918e5a4d525e70.json  query-6d29c4e3b4039910adf30a49b660b16db5035cc2daed6562d829593a3b269977.json  query-75514fad43fddd78c2b035bcbe5a1d6ec32a184cf364ce5530e5dd54786e27f8.json  query-775e71c7c365b309484ecbc59a2ee6437a42d48844cae43c922e9daa37908307.json  query-81589b8729cba085fb0eaedf28f1026a670c57f2b845b867332a85dacf33e4b4.json  query-86aad265e65c11a63c947d28cd92e2d2c1efb6b5d3202b89ff3b5d7d43b67c98.json  query-896f2ab7161d3595e6aa7e3aec8fe6189c069d4f9f1c899c2cd8b9d4a37a86ba.json  query-8d44f312eb8b244efe0db1d9fd2d7996e925d1c88a1bcc062d6aaa4bda195bc7.json  query-cbd1ddc633d57160b1602c3cec87fb4337284325a5d385a8e63ceab9c73b11f1.json  query-e471f1c23e53c023e549c627e9f456c162b41835daa9f816ce7123bd33fddd5b.json  query-ea16d64cb14ce7c18f58290cf27cebdf45df31bbfcfb3f7aafb61567dba88dbf.json  query-f9d64aae9e6e68396a1b68fdd1a2743cf29068e4cc39ab77f8a60aae4db95002.json  query-fc528498858e4061b735317fc4c8d2c7ced72dc733c3cb95cc0602f12c2641b3.json
crates/daemon/migrations/: 0001_init.sql  0002_rules_config.sql  0003_outbox_acks.sql
crates/daemon/src/: asr.rs  auth.rs  config.rs  error.rs  gate.rs  lib.rs  main.rs  relay.rs  state.rs  tickets.rs  ws.rs
crates/daemon/src/agent/: context.rs  mod.rs
crates/daemon/src/api/: approvals.rs  asr.rs  audit.rs  config.rs  files.rs  fs.rs  health.rs  mod.rs  provider.rs  relay.rs  rules.rs  sessions.rs
crates/daemon/src/llm/: fallback.rs  groq.rs  mock.rs  mod.rs
crates/daemon/src/store/: acks.rs  approvals.rs  audit.rs  config.rs  events.rs  files.rs  messages.rs  mod.rs  rules.rs  sessions.rs
crates/daemon/src/tools/: edit_file.rs  mod.rs  read_file.rs  run_shell.rs  search.rs  write_file.rs
crates/daemon/tests/: agent_e2e.rs  fallback.rs  rest_api.rs  ws.rs
crates/relay/: Cargo.toml
crates/relay/migrations/: 0001_init.sql  0002_google_outbox.sql
crates/relay/src/: auth.rs  config.rs  devices.rs  error.rs  google.rs  hub.rs  lib.rs  main.rs  outbox.rs  pairing.rs  ws.rs
crates/relay/tests/: auth.rs  forward.rs  outbox.rs  pairing.rs
crates/relay/tests/common/: mod.rs
docs/api/: requests.http
docs/audits/: relay-lan-smoke.md
docs/audits/corte1/: FIXLOG.md  reporte.tex
docs/audits/corte1/lighthouse/: landing-desktop-run1.report.html  landing-desktop-run1.report.json  landing-desktop-run2.report.html  landing-desktop-run2.report.json  landing-desktop-run3.report.html  landing-desktop-run3.report.json  landing-mobile-run1.report.html  landing-mobile-run1.report.json  landing-mobile-run2.report.html  landing-mobile-run2.report.json  (+14 more)
docs/decisions/: ADR-009-buzon-offline.md  README.md
(+4 files in other folders)
