[workspace]
resolver = "2"
members = ["crates/core", "crates/daemon"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/RamsesCamas/Rutsubo"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
thiserror = "2"
ts-rs = { version = "11", features = ["chrono-impl", "serde-json-impl", "no-serde-warnings"] }
schemars = { version = "1", features = ["chrono04"] }
