[package]
name = "rutsubo-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Daemon de Rutsubo: API REST (C-1), WebSocket de eventos (C-3), agent loop y adapter LLM (C-4)"

[dependencies]
rutsubo-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
ulid.workspace = true
thiserror.workspace = true

axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "set-header", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono", "postgres"] }
async-trait = "0.1"
futures = "0.3"
grep-searcher = "0.1"
grep-regex = "0.1"
ignore = "0.4"
subtle = "2"
rand = "0.9"
base64 = "0.22"
directories = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
async-openai = { version = "0.41.1", features = ["rustls", "chat-completion", "audio"] }
hmac = "0.13.0"
sha2 = "0.11.0"

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-tungstenite = "0.26"
tower = { version = "0.5", features = ["util"] }
