[package]
name = "rutsubo-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Relay pub/sub de Rutsubo (contrato C-2): cuentas, pairing y reenvío opaco de tráfico C-3"

[dependencies]
rutsubo-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
ulid.workspace = true
thiserror.workspace = true

axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["cors", "set-header"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
argon2 = "0.5"
ed25519-dalek = "2"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
subtle = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio-tungstenite = "0.26"
